index.html added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     of the document.
     </p>    
 
-// Teachable Machine 응용 소스코드 (시작)
+		<!--// Teachable Machine 응용 소스코드 (시작)-->
 
 <div style="visibility: hidden; position: absolute;" id="webcam-container"></div>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
@@ -78,7 +78,7 @@
     }
     init()
 </script>
-// Teachable Machine 응용 소스코드 (끝)
+<!--Teachable Machine 응용 소스코드 (끝)-->
 
 </body>
 </html>
