--- a/index.html
+++ b/index.html
@@ -11,14 +11,21 @@
         <li>JavaScript</li>
     </ol>
     <h2>HTML</h2>
-    <p>Hypertext Markup Language (HTML) is the standard markup language 
-    for <strong>creating <u>web</u> pages</strong> 
-    and web applications.Web browsers receive HTML documents 
-    from a web server or from local storage and render them 
-    into multimedia web pages. HTML describes the structure of a web page 
-    semantically and originally included cues for the appearance 
-    of the document.
-    </p>    
+    <p>
+		하이퍼텍스트 마크업 언어(HyperText Markup Language, HTML, 문화어: 초본문표식달기언어, 하이퍼본문표식달기언어)는 웹 페이지를 위한 지배적인 마크업 언어다. HTML은 제목, 단락, 목록 등과 같은 본문을 위한 구조적 의미를 나타내는 것뿐만 아니라 링크, 인용과 그 밖의 항목으로 구조적 문서를 만들 수 있는 방법을 제공한다.
+		</p>    
+
+    <h2>CSS</h2>
+		<p>
+		종속형 시트 또는 캐스케이딩 스타일 시트(Cascading Style Sheets, CSS)는 마크업 언어가 실제 표시되는 방법을 기술하는 언어로[1], HTML과 XHTML에 주로 쓰이며, XML에서도 사용할 수 있다. W3C의 표준이며, 레이아웃과 스타일을 정의할 때의 자유도가 높다.
+		</p>
+		
+		<h2>JavaScript</h2>
+		<p>
+		자바스크립트(영어: JavaScript)는 객체 기반의 스크립트 프로그래밍 언어이다. 이 언어는 웹 브라우저 내에서 주로 사용하며, 다른 응용 프로그램의 내장 객체에도 접근할 수 있는 기능을 가지고 있다. 또한 Node.js와 같은 런타임 환경과 같이 서버 프로그래밍에도 사용되고 있다.
+
+		Teachable Machine에서 구현한 머선러닝 모델을 자바스크립트로 실행할 수 있습니다. 컴퓨터 웹캠을 손으로 가려보세요. 그러면 다크모드로 전환됩니다. 
+		</p>
 
 		<!--// Teachable Machine 응용 소스코드 (시작)-->
 
