--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		</p>
 
 		<p>
-		Teachable Machine에서 구현한 머선러닝 모델을 자바스크립트로 실행할 수 있습니다. 컴퓨터 웹캠을 손으로 가려보세요. 그러면 다크모드로 전환됩니다. 
+		Teachable Machine에서 구현한 머선러닝 모델을 자바스크립트로 실행할 수 있습니다. <b>웹캠을 손으로 가려보세요. 그러면 <p style="color:white; background-color:black;">다크모드</p>로 전환됩니다.<b> 
 		</p>
 
 		<!--// Teachable Machine 응용 소스코드 (시작)-->
